gcc/testsuite/rust/rustc/ui/issues/issue-12187-1.rs
fn new<T>() -> &'static T {
    panic!()
}

fn main() {
    let &v = new();
// { dg-error ".E0282." "" { target *-*-* } .-1 }
}

